--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,6 +22,26 @@
     <p>As you might have guessed by now, my name is Michael, and I'm a full stack engineer. Lately I've been focusing more on the visual aspects of projects, both designing mockups as well as coding them into existence. While I was at Winthrop University, I was always torn between working on making things look good, and making them work on the back end, so naturally I settled on doing both. Check out some of the projects I've worked on below to get an idea of what I can do!</p>
 </div>
 
+<div id="CMS" class="productHighlight">
+    <div id="CMSImgContainer">
+        <img id="CMSImg1" class="previewImg" loading="lazy" onclick="showProjectImg('CMSImg1')" src="/images/appScreenshots/CMS1.png" alt="Cloud Music Suite Landing Page">
+        <img id="CMSImg2" class="previewImg" loading="lazy" onclick="showProjectImg('CMSImg2')" src="/images/appScreenshots/CMS2.png" alt="Cloud Music Suite main dashboard">
+    </div>
+
+    <div>
+        <span>
+            <h2>Cloud Music Suite</h2>
+            <hr>
+            <p>
+                This app was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with. Seeing as this is a project currently in use, the github repository is not available to look through. You can however view the current version with the below link.
+            </p>
+            <p>
+                <a href="https://cloudmusicsuite.com" target="blank">View online</a>
+            </p>
+        </span>
+    </div>
+</div>
+
 <div id="speedometer" class="productHighlight">
     <div id="speedoImgContainer">
         <img id="speedoImg1" class="previewImg" loading="lazy" onclick="showProjectImg('speedoImg1')" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
@@ -65,6 +85,8 @@
 
 <div id="expandImages">
     <div>
+        <img id="expandCMS1" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/CMS1.png" alt="Speedometer app screenshot">
+        <img id="expandCMS2" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/CMS2.png" alt="Speedometer app screenshot">
         <img id="expandSpedo1" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
         <img id="expandSpedo2" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
         <img id="expandSpedo3" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
