Cleans up un needed code

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,16 +16,9 @@
 
 <%- include('../partials/nav') %> 
 
-<div id="aboutMe">
-    <h2>About Me</h2>
-    <hr>
-    <p>As you might have guessed by now, my name is Michael, and I'm a full stack engineer. Lately I've been focusing more on the visual aspects of projects, both designing mockups as well as coding them into existence. While I was at Winthrop University, I was always torn between working on making things look good, and making them work on the back end, so naturally I settled on doing both. Check out some of the projects I've worked on below to get an idea of what I can do!</p>
-</div>
-
 <div id="CMS" class="productHighlight">
     <div id="CMSImgContainer">
         <img id="CMSImg1" class="previewImg" loading="lazy" onclick="showProjectImg('CMSImg1')" src="/images/appScreenshots/CMS1.png" alt="Cloud Music Suite Landing Page">
-        <img id="CMSImg2" class="previewImg" loading="lazy" onclick="showProjectImg('CMSImg2')" src="/images/appScreenshots/CMS2.png" alt="Cloud Music Suite main dashboard">
     </div>
 
     <div>
@@ -33,10 +26,7 @@
             <h2>Cloud Music Suite</h2>
             <hr>
             <p>
-                This app was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with. Seeing as this is a project currently in use, the github repository is not available to look through. You can however view the current version with the below link.
-            </p>
-            <p>
-                <a href="https://cloudmusicsuite.com" target="blank">View online</a>
+                This app was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with.
             </p>
         </span>
     </div>
@@ -56,9 +46,6 @@
             <p>
                 This app was designed to create a better way for users to track their speed along with the speed limit of the road they're driving on. It also serves as a way for parents or guardians to keep track of whether or not their child is speeding. This works based off of a three strike system, and allows the parent or guardian to set the limit for how fast and how long the child can speed, as well as who to notify if they do. 
             </p>
-            <p>
-                <a href="https://github.com/Walters8657/Android-Speedometer" target="blank">View on GitHub</a>
-            </p>
         </span>
     </div>
 </div>
@@ -66,7 +53,6 @@
 <div id="schedulerApp" class="productHighlight">
     <div id="schedulerImgContainer">
         <img id="cahsmImg1" class="previewImg" loading="lazy" onclick="showProjectImg('cahsmImg1')" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
-        <img id="cahsmImg2" class="previewImg" loading="lazy" onclick="showProjectImg('cahsmImg2')" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
     </div>
 
     <div>
@@ -76,24 +62,7 @@
             <p>
                 This app was designed to give the children's attention home of Rock Hill a better way to organize their children's schedules. Previously they had been keeping track of the schedules on paper, but with this new system it allowed every child and staff member to view the schedules they need to see. It also opened up the ability to easily generate reports based on name, age, gender, event, and date to know if events are being attended when they are scheduled. 
             </p>
-            <p>
-                <a href="https://github.com/Walters8657/Schedule-Manager" target="blank">View on Github</a>
-            </p>
         </span>
-    </div>
-</div>
-
-<div id="expandImages">
-    <div>
-        <img id="expandCMS1" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/CMS1.png" alt="Speedometer app screenshot">
-        <img id="expandCMS2" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/CMS2.png" alt="Speedometer app screenshot">
-        <img id="expandSpedo1" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
-        <img id="expandSpedo2" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
-        <img id="expandSpedo3" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
-        
-        <img id="expandScheduler1" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
-        <img id="expandScheduler2" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
-        <p onclick="hideProjectImages()">Close</p>
     </div>
 </div>
 
