--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,20 +1,19 @@
 <%- include('../partials/head') %> 
 
+
+
 <body>
 
 <header id="indexHeader">
+    <%- include('../partials/nav') %> 
     <div>
         <span>
             <h1>Michael Walters</h1>
-            <p>Web Development</p>
+            <p>Web Developer</p>
+            <p>Software Engineer</p>
         </span>
     </div>
-
-    <%- include('../partials/socialLinks') %> 
-
 </header>
-
-<%- include('../partials/nav') %> 
 
 <div id="CMS" class="productHighlight">
     <div id="CMSImgContainer">
