--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,9 +1,100 @@
 @import 'mixins';
 
-#aboutMe {
-    @include padding;
-    max-width: 900px;
-    margin: auto;
+#indexHeader {
+    nav ul {
+        text-align: right;
+    }
+    div:nth-of-type(1) {
+        span {
+            color: $black;
+            text-align: left;
+            h1 {
+                font-size: 80px;
+            }
+            p {
+                 font-size: 35px;
+                 margin-top: 15px;
+                 line-height: 40px;
+             }
+        }
+    }
+    div:nth-of-type(2) {
+        text-align: left;
+    }
+}
+
+@media (max-width: 998px) {
+    #indexHeader {
+        div:nth-of-type(1) {
+            span {
+                h1 {
+                    font-size: 70px;
+                }
+                p {
+                     font-size: 35px;
+                 }
+            }
+        }
+    }
+}
+
+@media (max-width: 930px) {
+    #indexHeader {
+        div:nth-of-type(1) {
+            span {
+                margin-right: auto;
+                h1 {
+                    display: inline-block;
+                    width: 250px;
+                }
+                p {
+                     text-align: left;
+                 }
+            }
+        }
+    }
+}
+
+@media (max-width: 635px) {
+    #indexHeader {
+        div:nth-of-type(1) {
+            span {
+                margin-left: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 635px) {
+    #indexHeader {
+        div:nth-of-type(1) {
+            span {
+                h1 {
+                    font-size: 50px;
+                }
+                p {
+                    font-size: 25px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    #indexHeader {
+        div:nth-of-type(1) {
+            span {
+                margin: 20px -20px;
+                padding: 20px;
+                width: calc(100vw);
+                background-image: linear-gradient(rgba(250, 250, 250, .5), rgba(250, 250, 250, .5));
+                h1, p {
+                    width: 100%;
+                    text-align: center;
+                }
+            }
+        }
+    }
 }
 
 .productHighlight {
@@ -72,3 +163,4 @@
         }
     }
 }
+
