--- a/public/scss/_resume.scss
+++ b/public/scss/_resume.scss
@@ -1,3 +1,33 @@
+#nonIndexHeader {
+    color: $white;
+
+    background-color: $blue; //Sets bg color to desired color
+    
+    height: 150px;
+    background-image: url('/images/me.png');
+    background-size: contain;
+
+    background-repeat: no-repeat;
+    background-position-y: top;
+    background-position-x: right;
+    div:nth-of-type(1) {
+        display: flex; //Centers header text vertically
+        align-items: center;
+        justify-content: left;
+
+        height: calc(100% - 1.3rem); //Flex box fills height of header minus room for links
+
+        justify-content: left;
+        margin-right: 100px;
+    }
+    div:nth-of-type(2) {
+        text-align: center;
+        a {
+            color: $white;
+        }
+    }
+}
+
 #resumeAside {
     padding: 20px;
     div {
