--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,7 @@ html {
 
 @media (max-width: 600px) {
   html {
-    font-size: 17px;
+    font-size: 14px;
   }
 }
 
@@ -225,8 +225,27 @@ footer img {
   }
 }
 
+#indexContainer {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#showcaseContainer {
+  overflow-y: auto;
+}
+
+#indexHeader {
+  align-self: center;
+}
+
 #indexHeader nav ul {
-  text-align: right;
+  margin-left: 0px;
+  text-align: left;
+}
+
+#indexHeader div:nth-of-type(1) {
+  min-width: 500px;
 }
 
 #indexHeader div:nth-of-type(1) span {
@@ -235,125 +254,50 @@ footer img {
 }
 
 #indexHeader div:nth-of-type(1) span h1 {
-  font-size: 80px;
+  font-size: 60px;
 }
 
 #indexHeader div:nth-of-type(1) span p {
-  font-size: 35px;
+  font-size: 30px;
   margin-top: 15px;
   line-height: 40px;
-}
-
-#indexHeader div:nth-of-type(2) {
-  text-align: left;
-}
-
-@media (max-width: 998px) {
-  #indexHeader div:nth-of-type(1) span h1 {
-    font-size: 70px;
-  }
-  #indexHeader div:nth-of-type(1) span p {
-    font-size: 35px;
-  }
-}
-
-@media (max-width: 930px) {
-  #indexHeader div:nth-of-type(1) span {
-    margin-right: auto;
-  }
-  #indexHeader div:nth-of-type(1) span h1 {
-    display: inline-block;
-    width: 250px;
-  }
-  #indexHeader div:nth-of-type(1) span p {
-    text-align: left;
-  }
-}
-
-@media (max-width: 635px) {
-  #indexHeader div:nth-of-type(1) span {
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 635px) {
-  #indexHeader div:nth-of-type(1) span h1 {
-    font-size: 50px;
-  }
-  #indexHeader div:nth-of-type(1) span p {
-    font-size: 25px;
-  }
-}
-
-@media (max-width: 480px) {
-  #indexHeader div:nth-of-type(1) span {
-    margin: 20px -20px;
-    padding: 20px;
-    width: calc(100vw);
-    background-image: linear-gradient(rgba(250, 250, 250, 0.5), rgba(250, 250, 250, 0.5));
-  }
-  #indexHeader div:nth-of-type(1) span h1, #indexHeader div:nth-of-type(1) span p {
-    width: 100%;
-    text-align: center;
-  }
 }
 
 .productHighlight {
   padding: 30px 15px;
 }
 
-@media (min-width: 980px) {
-  .productHighlight {
-    display: grid;
-    grid-template-columns: auto 300px 600px auto;
-    column-gap: 20px;
-  }
-  .productHighlight div:nth-of-type(1) {
-    grid-column: 2/3;
-  }
-  .productHighlight div:nth-of-type(2) {
-    display: flex;
-    align-self: center;
-  }
+.productHighlight hr {
+  max-width: 450px;
+  margin-left: 0px;
 }
 
-.productHighlight div:nth-of-type(1) {
-  margin: auto;
-  height: 316px;
-  width: 300px;
-}
-
-.productHighlight div:nth-of-type(2) p:nth-last-of-type(1) > a {
-  display: block;
+.productHighlight div:nth-of-type(2) {
   margin-top: 10px;
-  text-align: right;
 }
 
-.productHighlight img:hover {
-  cursor: pointer;
+.productHighlight .productImage {
+  margin: 20px auto;
+}
+
+#speedometer #speedoImgContainer {
+  width: calc(580px);
+  margin: auto;
 }
 
 #speedometer #speedoImgContainer img {
-  width: 150px;
-  position: relative;
-}
-
-#speedometer #speedoImgContainer img:nth-of-type(2) {
-  margin-left: -80px;
-  top: 25px;
-}
-
-#speedometer #speedoImgContainer img:nth-of-type(3) {
-  margin-left: -80px;
-  top: 50px;
+  width: 170px;
+  margin: auto 10px;
 }
 
 #schedulerApp #schedulerImgContainer img {
   display: block;
-  width: 300px;
+  width: 560px;
+  margin: auto;
 }
 
 #CMS #CMSImgContainer img {
   display: block;
-  width: 300px;
+  width: 560px;
+  margin: auto;
 }
