Updates contact info

--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -5,9 +5,9 @@
         <div>
             <h2>Contact</h2>
             <hr/>
-            <p>803-493-7198</p>
+            <!-- <p>803-493-7198</p> -->
             <p>me@michaelwalters.dev</p>
-            <p>Rock Hill, South Carolina</p>        
+            <p>Asheville, North Carolina</p>        
         </div>
         <div>
             <h2>Education</h2>
