--- a/public/css/main.css
+++ b/public/css/main.css
@@ -274,6 +274,7 @@ footer img {
 
 .productHighlight {
   padding: 30px 15px;
+  max-width: 100vw;
 }
 
 .productHighlight hr {
@@ -331,6 +332,17 @@ footer img {
     margin-left: -20px;
     background-color: #fafafa;
     color: #322b24;
+  }
+  #indexContainer #schedulerImgContainer img, #indexContainer #CMSImgContainer img {
+    width: 90vw;
+  }
+  #indexContainer #speedoImgContainer {
+    width: calc(90vw);
+    margin: auto;
+  }
+  #indexContainer #speedoImgContainer img {
+    width: 29vw;
+    margin: auto auto;
   }
   #indexContainer footer {
     background-color: #12487e;
