Complete css start over

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,354 +1,10 @@
-html {
-  font-size: 20px;
-}
-
-@media (max-width: 600px) {
-  html {
-    font-size: 14px;
-  }
-}
-
-h1 {
-  font-size: 2.63rem;
-}
-
-h2 {
-  font-size: 2.1rem;
-}
-
-h3 {
-  font-size: 1.57rem;
-}
-
-h4, h5, h6 {
-  font-size: 1.31rem;
-}
-
-p, li {
-  font-size: 1rem;
-  line-height: 1.6rem;
-}
-
-body {
-  color: #322b24;
-  background-color: #fafafa;
-  font-family: 'Ubuntu', 'sans-serif';
-}
-
-a, a:visited {
-  text-decoration: none;
-  color: #322b24;
-}
-
-hr {
-  height: 2px;
-  border: none;
-  background-color: #322b24;
-}
-
-#indexHeader div:nth-of-type(1), #nonIndexHeader div:nth-of-type(1) {
-  padding: 0px 20px;
-}
-
-#indexHeader div:nth-of-type(1) span, #nonIndexHeader div:nth-of-type(1) span {
-  display: inline;
-}
-
-#indexHeader div:nth-of-type(1) span h1, #nonIndexHeader div:nth-of-type(1) span h1 {
-  font-weight: 600;
-}
-
-#indexHeader div:nth-of-type(2), #nonIndexHeader div:nth-of-type(2) {
-  font-size: 0.8rem;
-}
-
-#indexHeader div:nth-of-type(2) a:not(:nth-of-type(1)):before, #nonIndexHeader div:nth-of-type(2) a:not(:nth-of-type(1)):before {
-  content: " | ";
-}
-
-nav ul {
-  margin: 10px;
-  text-align: center;
-}
-
-nav ul li {
-  display: inline;
-}
-
-nav ul li a {
-  padding: 5px;
-}
-
-nav ul li:not(:nth-last-child(1)):after {
-  content: ' | ';
-}
-
-nav .navActivePage {
-  border-bottom: solid #322b24 2px;
-  padding-bottom: 5px;
-}
-
-footer {
-  text-align: center;
-  background-color: #12487e;
-  color: #fafafa;
-  padding: 10px;
-}
-
-footer a, footer img {
-  height: 30px;
-}
-
-footer img {
-  margin: 0px 5px 5px;
-}
-
-#nonIndexHeader {
-  color: #fafafa;
-  background-color: #12487e;
-  height: 150px;
-  background-image: url("/images/me.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position-y: top;
-  background-position-x: right;
-}
-
-#nonIndexHeader div:nth-of-type(1) {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  height: calc(100% - 1.3rem);
-  justify-content: left;
-  margin-right: 100px;
-}
-
-#nonIndexHeader div:nth-of-type(2) {
-  text-align: center;
-}
-
-#nonIndexHeader div:nth-of-type(2) a {
-  color: #fafafa;
-}
-
-#resumeAside {
-  padding: 20px;
-}
-
-#resumeAside div {
-  margin-bottom: 40px;
-}
-
-#resumeAside div p, #resumeAside div li {
-  margin-bottom: 10px;
-}
-
-#resumeAside div:nth-of-type(3) {
-  margin-bottom: 0px;
-}
-
-#resumeAside div:nth-of-type(3) ul {
-  display: inline;
-}
-
-#resumeAside div:nth-of-type(3) li {
-  display: inline;
-}
-
-#resumeAside div:nth-of-type(3) li:nth-of-type(even):after, #resumeAside div:nth-of-type(3) li:nth-of-type(even):before {
-  content: ' | ';
-}
-
-#resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before {
-  content: ' | ';
-}
-
-#mainResumeContent {
-  padding: 20px;
-}
-
-#mainResumeContent ul {
-  list-style: inside disc;
-  text-indent: -25px;
-  margin-left: 25px;
-}
-
-@media (min-width: 515px) {
-  #resumeAside div:not(:nth-of-type(3)) {
-    display: inline-block;
-  }
-  #resumeAside div:nth-of-type(2) {
-    float: right;
-  }
-  #resumeAside div:nth-of-type(3) {
-    text-align: center;
-  }
-  #resumeAside div:nth-of-type(3) h2 {
-    text-align: left;
-  }
-}
-
-@media (min-width: 676px) {
-  #resumeContainer {
-    display: flex;
-    margin: 20px auto;
-    max-width: 900px;
-  }
-  #resumeAside {
-    display: inline-block;
-    border-right: 2px solid #322b24;
-  }
-  #resumeAside ul {
-    display: inline-block;
-  }
-  #resumeAside ul:nth-of-type(2) {
-    float: right;
-    text-align: right;
-  }
-  #resumeAside div:nth-of-type(3) {
-    text-align: left;
-  }
-  #resumeAside div:nth-of-type(3) ul {
-    display: inline-block;
-  }
-  #resumeAside div:nth-of-type(3) li {
-    display: block;
-  }
-  #resumeAside div:nth-of-type(3) li:nth-of-type(even) {
-    opacity: 1;
-  }
-  #resumeAside div:nth-of-type(3) li:nth-of-type(even):after, #resumeAside div:nth-of-type(3) li:nth-of-type(even):before {
-    content: none;
-  }
-  #resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before {
-    content: none;
-  }
-}
-
-#indexContainer {
-  display: flex;
-  height: 100vh;
-  overflow: hidden;
-}
-
-#indexContainer footer {
-  background-color: #fafafa;
-  color: #322b24;
-}
-
-#indexContainer footer img {
-  filter: brightness(24%);
-}
-
-#showcaseContainer {
-  overflow-y: auto;
-}
-
-#indexHeader {
-  align-self: center;
-}
-
-#indexHeader nav ul {
-  margin-left: 0px;
-  text-align: left;
-}
-
-#indexHeader div:nth-of-type(1) {
-  min-width: 500px;
-}
-
-#indexHeader div:nth-of-type(1) span {
-  color: #322b24;
-  text-align: left;
-}
-
-#indexHeader div:nth-of-type(1) span h1 {
-  font-size: 60px;
-}
-
-#indexHeader div:nth-of-type(1) span p {
-  font-size: 30px;
-  margin-top: 15px;
-  line-height: 40px;
-}
-
-.productHighlight {
-  padding: 30px 15px;
+img {
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
-.productHighlight hr {
-  max-width: 450px;
-  margin-left: 0px;
-}
-
-.productHighlight div:nth-of-type(2) {
-  margin-top: 10px;
-}
-
-.productHighlight .productImage {
-  margin: 20px auto;
-}
-
-#speedometer #speedoImgContainer {
-  width: calc(580px);
-  margin: auto;
-}
-
-#speedometer #speedoImgContainer img {
-  width: 170px;
-  margin: auto 10px;
-}
-
-#schedulerApp #schedulerImgContainer img {
-  display: block;
-  width: 560px;
-  margin: auto;
-}
-
-#CMS #CMSImgContainer img {
-  display: block;
-  width: 560px;
-  margin: auto;
-}
-
-@media (max-width: 1135px) {
-  #indexContainer {
-    display: block;
-    overflow: auto;
-  }
-  #indexContainer #indexHeader {
-    padding: 10px auto;
-    background-color: #12487e;
-  }
-  #indexContainer #indexHeader div:nth-of-type(1) span {
-    color: #fafafa;
-  }
-  #indexContainer #indexHeader h1, #indexContainer #indexHeader nav ul, #indexContainer #indexHeader p {
-    text-align: center;
-  }
-  #indexContainer #indexHeader nav {
-    width: 100vw;
-    margin-left: -20px;
-    background-color: #fafafa;
-    color: #322b24;
-  }
-  #indexContainer #schedulerImgContainer img, #indexContainer #CMSImgContainer img {
-    width: 90vw;
-  }
-  #indexContainer #speedoImgContainer {
-    width: calc(90vw);
-    margin: auto;
-  }
-  #indexContainer #speedoImgContainer img {
-    width: 29vw;
-    margin: auto auto;
-  }
-  #indexContainer footer {
-    background-color: #12487e;
-    color: #fafafa;
-  }
-  #indexContainer footer img {
-    filter: none;
-  }
+#headerLogoImg {
+  width: 225px;
+  border-radius: 50%;
+  background-color: #12487e;
 }
