--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,7 @@
         <header id="indexHeader">
             <div>
                 <span>
+                    <img id="headerLogoImg" src="images/me.png" alt="Personal Logo">
                     <h1>Michael Walters</h1>
                     <p>Web Development</p>
                     <p>Software Engineering</p>
