--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,136 +1,12 @@
-@import 'mixins';
 @import 'variables';
 
-#indexContainer {
-    display: flex;
-
-    height: 100vh;
-    overflow: hidden;
-    footer {
-        img {
-            filter: brightness(24%)
-        }
-        background-color: $white;
-        color: $black;
-    }
-}
-
-#showcaseContainer {
-    overflow-y:  auto;
-}
-
-#indexHeader {
-    align-self: center;
-    nav ul {
-        margin-left: 0px;
-        text-align: left;
-    }
-    div:nth-of-type(1) {
-        min-width: 500px;
-        span {
-            color: $black;
-            text-align: left;
-            h1 {
-                font-size: 60px;
-            }
-            p {
-                 font-size: 30px;
-                 margin-top: 15px;
-                 line-height: 40px;
-             }
-        }
-    }
-}
-
-.productHighlight {
-    @include padding;
+img {
     max-width: 100vw;
-    hr {
-        max-width: 450px;
-        margin-left: 0px;
-    }
-    div:nth-of-type(2) {
-        margin-top: 10px;
-    }
-    .productImage {
-        margin: 20px auto;
-    }
+    overflow-x: hidden;
 }
 
-#speedometer {
-    #speedoImgContainer {
-        width: calc(580px);
-        margin: auto;
-        img {
-            width: 170px;
-            margin: auto 10px;
-        }
-    }
+#headerLogoImg {
+    width: 225px;
+    border-radius: 50%;
+    background-color: $blue;
 }
-
-#schedulerApp {
-    #schedulerImgContainer {
-        img {
-            display: block;
-            width: 560px;
-            margin: auto;
-        }
-    }
-}
-
-#CMS {
-    #CMSImgContainer {
-        img {
-            display: block;
-            width: 560px;
-            margin: auto;
-        }
-    }
-}
-
-@media (max-width: 1135px) {
-    #indexContainer {
-        display: block;
-        overflow: auto;
-        #indexHeader {
-            padding: 10px auto;
-            background-color: $blue;
-            div:nth-of-type(1) span {
-                color: $white;
-            }
-            h1, nav ul, p {
-                text-align: center;
-            }
-            nav {
-                width: 100vw;
-                margin-left: -20px;
-                background-color: $white;
-                color: $black;
-            }
-        }
-
-        #schedulerImgContainer, #CMSImgContainer {
-            img {
-                width: 90vw;
-            }
-        }
-
-        #speedoImgContainer {
-            width: calc(90vw);
-            margin: auto;
-            img {
-                width: 29vw;
-                margin: auto auto;
-            }
-        }
-
-        footer {
-            img {
-                filter: none;
-            }
-            background-color: $blue;
-            color: $white;
-        }
-    }
-}
-
