--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,9 +7,14 @@
                 <span>
                     <img id="headerLogoImg" src="images/me.png" alt="Personal Logo">
                     <h1>Michael Walters</h1>
-                    <p>Web Development</p>
-                    <p>Software Engineering</p>
-                    <%- include('../partials/nav') %> 
+                    <p>Web Development | Software Engineering</p>
+                    <nav>
+                        <ul>
+                            <li><a href="/">Home</a></li>
+                    
+                            <li><a href="/resume">Resume</a></li>
+                        </ul>
+                    </nav>
                 </span>
             </div>
         </header>
