--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,63 @@
+body {
+  font-size: 18px;
+  line-height: 1.75rem;
+  font-family: 'Ubuntu', 'Sans-serif';
+}
+
+h1 {
+  font-size: 2.5rem;
+  line-height: 4rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+  line-height: 3.75rem;
+}
+
+h3 {
+  font-size: 2rem;
+  line-height: 3.5rem;
+}
+
+h4 {
+  font-size: 1.75rem;
+  line-height: 3.25rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+  line-height: 3rem;
+}
+
+h6 {
+  font-size: 1.25rem;
+  line-height: 2.75rem;
+}
+
 img {
   max-width: 100vw;
   overflow-x: hidden;
 }
 
-#headerLogoImg {
+#indexHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+
+#indexHeader #headerLogoImg {
   width: 225px;
   border-radius: 50%;
   background-color: #12487e;
+}
+
+#indexHeader div span {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#indexHeader nav ul li {
+  display: inline;
 }
