--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -6,5 +6,13 @@ img {
     overflow-x: hidden;
 }
 
+body {
+    color: $black;
+}
+
+a, a:visited {
+    color: $black;
+}
+
 @import 'resume';
 @import 'index';
