--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,81 +1,62 @@
 <%- include('../partials/head') %> 
 
 <body>
-    <div id="indexContainer">
-        <header id="indexHeader">
+    <header id="indexHeader">
+        <div>
+            <span>
+                <img id="headerLogoImg" src="images/me.png" alt="Personal Logo">
+                <h1>Michael Walters</h1>
+                <p>Web Developer & Software Engineer</p>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li> | </li>           
+                        <li><a href="#">Resume</a></li>
+                    </ul>
+                </nav>
+            </span>
+        </div>
+    </header>
+    
+    <div id="showcaseContainer">
+        <div id="CMS" class="productHighlight">
             <div>
                 <span>
-                    <img id="headerLogoImg" src="images/me.png" alt="Personal Logo">
-                    <h1>Michael Walters</h1>
-                    <p>Web Development | Software Engineering</p>
-                    <nav>
-                        <ul>
-                            <li><a href="/">Home</a></li>
+                    <h2>Cloud Music Suite</h2>
+                    <hr>
                     
-                            <li><a href="/resume">Resume</a></li>
-                        </ul>
-                    </nav>
+                    <div id="CMSImgContainer" class="productImage">
+                        <img id="CMSImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/CMS1.png" alt="Cloud Music Suite Landing Page">
+                    </div>
+
+                    <p>
+                        This platform was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with.
+                    </p>
                 </span>
             </div>
-        </header>
+        </div>
         
-        <div id="showcaseContainer">
-            <div id="CMS" class="productHighlight">
-                <div>
-                    <span>
-                        <h2>Cloud Music Suite</h2>
-                        <hr>
-                        
-                        <div id="CMSImgContainer" class="productImage">
-                            <img id="CMSImg1" class="previewImg" loading="lazy" onclick="showProjectImg('CMSImg1')" src="/images/appScreenshots/CMS1.png" alt="Cloud Music Suite Landing Page">
-                        </div>
+        <div id="speedometer" class="productHighlight">
+            <div>
+                <span>
+                    <h2>Speedometer</h2>
+                    <hr>
 
-                        <p>
-                            This platform was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with.
-                        </p>
-                    </span>
-                </div>
+                    <div id="speedoImgContainer" class="productImage">
+                        <img id="speedoImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
+                        <img id="speedoImg2" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
+                        <img id="speedoImg3" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
+                    </div>
+
+                    <p>
+                        This app was designed to create a better way for users to track their speed along with the speed limit of the road they're driving on. It also serves as a way for parents or guardians to keep track of whether or not their child is speeding. This works based off of a three strike system, and allows the parent or guardian to set the limit for how fast and how long the child can speed, as well as who to notify if they do. 
+                    </p>
+                </span>
             </div>
-            
-            <div id="speedometer" class="productHighlight">
-            
-                <div>
-                    <span>
-                        <h2>Speedometer</h2>
-                        <hr>
-
-                        <div id="speedoImgContainer" class="productImage">
-                            <img id="speedoImg1" class="previewImg" loading="lazy" onclick="showProjectImg('speedoImg1')" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
-                            <img id="speedoImg2" class="previewImg" loading="lazy" onclick="showProjectImg('speedoImg2')" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
-                            <img id="speedoImg3" class="previewImg" loading="lazy" onclick="showProjectImg('speedoImg3')" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
-                        </div>
-
-                        <p>
-                            This app was designed to create a better way for users to track their speed along with the speed limit of the road they're driving on. It also serves as a way for parents or guardians to keep track of whether or not their child is speeding. This works based off of a three strike system, and allows the parent or guardian to set the limit for how fast and how long the child can speed, as well as who to notify if they do. 
-                        </p>
-                    </span>
-                </div>
-            </div>
-            
-            <div id="schedulerApp" class="productHighlight">            
-                <div>
-                    <span>
-                        <h2>Schedule Manager</h2>
-                        <hr>
-
-                        <div id="schedulerImgContainer" class="productImage">
-                            <img id="cahsmImg1" class="previewImg" loading="lazy" onclick="showProjectImg('cahsmImg1')" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
-                        </div>
-
-                        <p>
-                            This app was designed to give the children's attention home of Rock Hill a better way to organize their children's schedules. Previously they had been keeping track of the schedules on paper, but with this new system it allowed every child and staff member to view the schedules they need to see. It also opened up the ability to easily generate reports based on name, age, gender, event, and date to know if events are being attended when they are scheduled. 
-                        </p>
-                    </span>
-                </div>
-            </div>
-            <%- include('../partials/footer') %> 
         </div>
     </div>
+    
+    <%- include('../partials/footer') %> 
 
     <script src="./js/main.js"></script>
 
