--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,17 +34,37 @@ h6 {
   line-height: 2.75rem;
 }
 
+body {
+  color: #322b24;
+  background-color: #fafafa;
+}
+
 img {
   max-width: 100vw;
   overflow-x: hidden;
 }
 
-body {
-  color: #322b24;
+a {
+  text-decoration: none;
 }
 
 a, a:visited {
   color: #322b24;
+}
+
+footer {
+  background-color: #12487e;
+  padding: 20px;
+  color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer img {
+  width: 25px;
+  margin: 0 15px;
 }
 
 #indexHeader {
