--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -19,6 +19,10 @@ a, a:visited {
     color: $black;
 }
 
+p {
+    margin: 30px 0;
+}
+
 footer {
     background-color: $blue;
     padding: 20px;
