--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,14 +23,22 @@
             <div>
                 <span>
                     <h2>Cloud Music Suite</h2>
-                    <hr>
                     
                     <div id="CMSImgContainer" class="productImage">
                         <img id="CMSImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/CMS1.png" alt="Cloud Music Suite Landing Page">
                     </div>
 
                     <p>
-                        This platform was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with.
+                        This platform was originally born out of one of my good friends and percussion instructors desire to have a online platform to teach lessons during the height of the pandemic. The aim of this platform is to group all necessary aspects of taking lessons into one centralized location. This includes instructor discovery, lesson availability, schedule management, file management, and lesson feedback. This project is still in development today as we work on adding desired features, improved stability, and improving the overall experience on the website.
+                    </p>
+                    <p>    
+                        The creation of this project saw me, along with three other associates who all knew each-other from competing in the marching arts, co-founding the company in July of 2021. Since its founding, we have added another member to the software team, making us a three man team, as well as bringing on a dedicated blog writer and social media manager to assist us in growing our brand and reputation. 
+                    </p>
+                    <p>
+                        My primary role in this project was originally to create the site-wide styles and layouts used throughout the website, while the second programmers role was to create the backend functionality. Since adding a third member to the software development team, we have transitioned away from having specific roles that we do, in favor of each member having more of a full stack development position. We found that this has helped greatly in both creating new features and fixing bugs, as we all have somewhat of an unpredictable schedule between work, school, and volunteer work with the marching program that we all know each other from.
+                    </p>
+                    <p>
+                        This project has taught me, along with all other members of the team, a huge amount about project management, as well as the most efficient ways to work with the limited personal and time resources that we have available to us. In the early stages of the project, we were incredibly ambitious with our goals and had to quickly learn how to set realistic expectations for ourselves as developers, and for the companies growth as a whole. Facing these challenges however, has brought us into an incredibly reliable and thought out system of work which we have seen bring us increased success and efficiency to our workflow, allowing us to have better timelines for our both our non-developer co-founders, as well as the users on the platform.
                     </p>
                 </span>
             </div>
@@ -40,7 +48,6 @@
             <div>
                 <span>
                     <h2>Speedometer</h2>
-                    <hr>
 
                     <div id="speedoImgContainer" class="productImage">
                         <img id="speedoImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
