--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -56,7 +56,16 @@
                     </div>
 
                     <p>
-                        This app was designed to create a better way for users to track their speed along with the speed limit of the road they're driving on. It also serves as a way for parents or guardians to keep track of whether or not their child is speeding. This works based off of a three strike system, and allows the parent or guardian to set the limit for how fast and how long the child can speed, as well as who to notify if they do. 
+                        While not as in depth of an application as some other projects, this Speedometer also taught me some key items about web development, most importantly, a design first approach. 
+                    </p>
+                    <p>
+                        For the majority of application and projects I had made prior to this Speedometer, I always wanted to jump straight in to coding rather than thinking about what I wanted to make it first. With this project however, me and my partner first created several design iterations to get to both a functional and attractive design first. Once we had this design, the actual development time of the application was significantly cut down, as we didn't have to make any decisions while we were coding, we just had to recreate what we already designed. 
+                    </p>
+                    <p>
+                        For this project my main role was to do the visual design portion of the application, but was able to assist in the backend portions as well because of how much the design first approach we used sped up the actual coding of the design. This was a fairly straight forward UI as well, so there wasn't much to be figure out along the way. Throughout designing the backend portions, it was also a relatively simple process due to leveraging pre-made libraries, and only needing to get a few simple metrics from the phones sensors. 
+                    </p>
+                    <p>
+                        The majority of the struggle for this project was the user experience when using the application, as our intended use was for a parent or guardian to be able to set the app up and have it running on its own once the child begins driving. Unfortunately, we were unable to implement automatic detection of driving, but did manage to implement the majority of the features we wanted to have, including password protected configuration, custom speeding allowances, and parental messaging through sms in the case of excessive speeding. One key feature that we were unable to implement due to cost the cost restraints of it being a school project, was speed limit detection, which would have tied the entire app together and potentially led to us releasing it for public use.
                     </p>
                 </span>
             </div>
