--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -37,5 +37,15 @@ footer {
     }
 }
 
+//--------------
+//--------------
+// CLASSES
+//--------------
+//--------------
+
+.hideElement {
+    display: none;
+}
+
 @import 'resume';
 @import 'index';
