--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,7 +29,7 @@
                 <p>
                     This platform was originally born out of one of my good friends and percussion instructors desire to have a online platform to teach lessons during the height of the pandemic. The aim of this platform is to group all necessary aspects of taking lessons into one centralized location. This includes instructor discovery, lesson availability, schedule management, file management, and lesson feedback. This project is still in development today as we work on adding desired features, improved stability, and improving the overall experience on the website.
                 </p>
-                <p id="cmsReadMore" onclick="showMoreCMS()">Read More</p>
+                <p id="cmsReadMore" class="centerText" onclick="showMoreCMS()">Read More</p>
                 <span id="cmsReadMoreContent" class="hideElement">
                     <p>    
                         The creation of this project saw me, along with three other associates who all knew each-other from competing in the marching arts, co-founding the company in July of 2021. Since its founding, we have added another member to the software team, making us a three man team, as well as bringing on a dedicated blog writer and social media manager to assist us in growing our brand and reputation. 
@@ -40,7 +40,7 @@
                     <p>
                         This project has taught me, along with all other members of the team, a huge amount about project management, as well as the most efficient ways to work with the limited personal and time resources that we have available to us. In the early stages of the project, we were incredibly ambitious with our goals and had to quickly learn how to set realistic expectations for ourselves as developers, and for the companies growth as a whole. Facing these challenges however, has brought us into an incredibly reliable and thought out system of work which we have seen bring us increased success and efficiency to our workflow, allowing us to have better timelines for our both our non-developer co-founders, as well as the users on the platform.
                     </p>
-                    <p id="cmsReadLess" onclick="showLessCMS()">Read Less</p>
+                    <p id="cmsReadLess" class="centerText" onclick="showLessCMS()">Read Less</p>
                 </span>
         </div>
         
@@ -56,7 +56,7 @@
                 <p>
                     While not as in depth of an application as some other projects, this Speedometer also taught me some key items about web development, most importantly, a design first approach. 
                 </p>
-                <p id="speedoReadMore" onclick="showMoreSpeedo()">Read More</p>
+                <p id="speedoReadMore" class="centerText" onclick="showMoreSpeedo()">Read More</p>
                 <span id="speedoReadMoreContent" class="hideElement">
                     <p>
                         For the majority of application and projects I had made prior to this Speedometer, I always wanted to jump straight in to coding rather than thinking about what I wanted to make it first. With this project however, me and my partner first created several design iterations to get to both a functional and attractive design first. Once we had this design, the actual development time of the application was significantly cut down, as we didn't have to make any decisions while we were coding, we just had to recreate what we already designed. 
@@ -67,7 +67,7 @@
                     <p>
                         The majority of the struggle for this project was the user experience when using the application, as our intended use was for a parent or guardian to be able to set the app up and have it running on its own once the child begins driving. Unfortunately, we were unable to implement automatic detection of driving, but did manage to implement the majority of the features we wanted to have, including password protected configuration, custom speeding allowances, and parental messaging through sms in the case of excessive speeding. One key feature that we were unable to implement due to cost the cost restraints of it being a school project, was speed limit detection, which would have tied the entire app together and potentially led to us releasing it for public use.
                     </p>
-                    <p id="speedoReadLess" onclick="showLessSpeedo()">Read Less</p>
+                    <p id="speedoReadLess" class="centerText" onclick="showLessSpeedo()">Read Less</p>
                 </span>
         </div>
     </div>
