Removes on click functions from projects

--- a/views/partials/showcaseContainer.ejs
+++ b/views/partials/showcaseContainer.ejs
@@ -36,7 +36,7 @@
             <p>
                 While not as in depth of an application as some other projects, this Speedometer also taught me some key items about web development, most importantly, a design first approach. 
             </p>
-            <p id="speedoReadMore" class="centerText" onclick="showMoreSpeedo()">Read More</p>
+            <p id="speedoReadMore" class="centerText">Read More</p>
             <span id="speedoReadMoreContent" class="hideElement">
                 <p>
                     For the majority of application and projects I had made prior to this Speedometer, I always wanted to jump straight in to coding rather than thinking about what I wanted to make it first. With this project however, me and my partner first created several design iterations to get to both a functional and attractive design first. Once we had this design, the actual development time of the application was significantly cut down, as we didn't have to make any decisions while we were coding, we just had to recreate what we already designed. 
@@ -47,7 +47,7 @@
                 <p>
                     The majority of the struggle for this project was the user experience when using the application, as our intended use was for a parent or guardian to be able to set the app up and have it running on its own once the child begins driving. Unfortunately, we were unable to implement automatic detection of driving, but did manage to implement the majority of the features we wanted to have, including password protected configuration, custom speeding allowances, and parental messaging through sms in the case of excessive speeding. One key feature that we were unable to implement due to cost the cost restraints of it being a school project, was speed limit detection, which would have tied the entire app together and potentially led to us releasing it for public use.
                 </p>
-                <p id="speedoReadLess" class="centerText" onclick="showLessSpeedo()">Read Less</p>
+                <p id="speedoReadLess" class="centerText">Read Less</p>
             </span>
     </div>
 </div>
